# demo

./: .diesel.swp  .env  Cargo.toml  dump.rdb
crates/communities/: Cargo.toml
crates/other/: .env  Cargo.toml
crates/posts/: Cargo.toml
crates/users/: .env  Cargo.toml
crates/users/migrations/2022-07-08-071614_users/: up.sql
crates/users/src/: schema.rs
crates/users/src/models/sql/: users.sql
migrations/2022-06-09-102111_users/: up.sql
migrations/2022-06-09-102147_posts/: up.sql
migrations/2022-06-09-102307_docs/: up.sql
migrations/2022-06-09-102323_follows/: up.sql
migrations/2022-06-09-102339_friends/: up.sql
migrations/2022-06-09-102354_managers/: up.sql
migrations/2022-06-09-102410_notify/: up.sql
migrations/2022-06-09-102440_music/: up.sql
migrations/2022-06-09-102456_perms/: up.sql
migrations/2022-06-09-102513_votes/: up.sql
migrations/2022-06-18-094447_player/: up.sql
migrations/2022-06-19-191607_dd/: up.sql
migrations/2022-06-20-091127_other/: up.sql
migrations/2022-06-20-091147_users/: up.sql
migrations/2022-06-20-091620_communities/: up.sql
migrations/2022-06-20-091659_chats/: up.sql
migrations/2022-06-20-091727_photos/: up.sql
migrations/2022-06-20-091742_survey/: up.sql
migrations/2022-06-20-091800_video/: up.sql
migrations/2022-06-20-091945_goods/: up.sql
migrations/2022-06-20-092000_music/: up.sql
migrations/2022-06-25-190902_vv/: up.sql
migrations/2022-06-30-073348_фф/: up.sql
src/: main.rs  routes.rs  schema.rs
src/models/: chats.rs  communities.rs  docs.rs  follows.rs  friends.rs  goods.rs  (+11 more)
(+825 files in other folders)
