[package]
name = "users"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
native-tls = "0.2.4"
serde = "1.0"
serde_json = "*"
dotenv = "0.15.0"
diesel = { version = "1.4.4", features = ["postgres"] }
chrono = { version = "0.4", features = ["serde"] }
argonautica = "0.2.0"
actix-multipart = "0.4.0-beta.12"
futures = "0.3.21"
actix-form-data = "0.6.2"
mime = "0.3.16"
failure = "0.1.8"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
actix-cors = "0.6.1"
actix-service = "*"
lazy_static = "*"
actix-rt = "2"
concat-string = "1.0.1"
